--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<html>
-  <title>
-    Vincent Wang's Personal Blog 
-  </title>
+---
+layout: default
+title: Vincent Wang
+---
 
-  <body>
-    Welcome! 
-  </body>
-</html>
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+  
+  <h1>Open Source Projects</h1>
+  <ul class="posts">
+    <li><a href="http://github.com/linsong/dailyconfig/">DailyConfig:</a> share my config files(dot files)</li>
+  </ul>
+</div>
+  
