--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 ---
 layout: default
 title: Vincent Wang
+name: Vincent Wang
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-  
-  <h1>Open Source Projects</h1>
-  <ul class="posts">
-    <li><a href="http://github.com/linsong/dailyconfig/">DailyConfig:</a> share my config files(dot files)</li>
-  </ul>
+<div id="main">
+  <div id="home">
+    <h1>Blog Posts</h1>
+    <ul class="posts">
+      {% for post in site.posts %}
+        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}" class="uppercase">{{ post.title }}</a></li>
+      {% endfor %}
+    </ul>
+    
+    <h1>Open Source Projects</h1>
+    <ul class="posts">
+      <li><a href="http://github.com/linsong/dailyconfig/">DailyConfig:</a> share my config files(dot files)</li>
+    </ul>
+  </div>
 </div>
+
+<div id="sidebar">
+  <div>
+    <p>My name is <b>{{ page.name }}</b>.</p>
+    <p>I am a Ruby, Python, C/C++ developer and a big fan of FOSS and CLI.</p>
+    <p>I has been a developer since 2000. Since then, I keep finding/implementing tools/ways to make my and other life easier.</p>
+    
+    <p>Follow me on twitter: <a href="http://twitter.com/linsong">@linsong</a></p>
+  </div>
   
+</div>
+
+<div style="clear:both"></div>
