add screenshots to vim super finder blog

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ name: Vincent Wang
 <div id="sidebar">
   <div>
     <p>My name is <b>{{ page.name }}</b>.</p>
-    <p>I am a Ruby, Python, C/C++ developer and a big fan of FOSS and CLI.</p>
-    <p>I has been a developer since 2000. Since then, I keep finding/implementing tools/ways to make my and other life easier.</p>
+    <p>I am a Ruby, Python, C/C++ developer and a big fan of FOSS and CLI, interested in making things and life easier.</p>
+    <p>I am also a dad, movie lover, book lover and yes, food lover.</p>
     
     <p>Follow me on twitter: <a href="http://twitter.com/linsong">@linsong</a></p>
   </div>
